<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <ImageView
            android:id="@+id/img_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/controls_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/controls_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/controls_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_small"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <Button
                android:id="@+id/btn_first"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/controls_first"/>

        <Space
                android:layout_width="@dimen/activity_margin_small"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/btn_previous"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/controls_prev"/>

        <Button
                android:id="@+id/btn_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:layout_marginEnd="@dimen/activity_margin_small"
                android:layout_marginRight="@dimen/activity_margin_small"
                android:text="@string/controls_random"/>

        <Button
                android:id="@+id/btn_next"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/controls_next"/>

        <Space
                android:layout_width="@dimen/activity_margin_small"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/btn_last"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/controls_last"/>



    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>